--- a/search/templates/home.html
+++ b/search/templates/home.html
@@ -12,7 +12,7 @@
                 <div class="card-icon"></div>
                 <h3>검색</h3>
                 <p>궁금한 비즈니스 용어를 검색하세요</p>
-                <a href="{% url 'search:search_page' %}" class="card-button">시작하기</a>
+                <a href="{% url 'search_page' %}" class="card-button">시작하기</a>
             </div>
         <div class="feature-cards">
             <div class="feature-card">
